
Version 0.3
-----------
API Additions
- Added support for Write Concerns

API Changes
- Database::filterID() has been changed to Database::createFilterMongoID()
- Config::setDb() is now Config::setDatabase()
- Config::init() is now Config::create()